# st3.teste

./: README.md  pyproject.toml
