[tool.poetry]
name = "projeto-pratico"
version = "0.1.0"
description = ""
authors = ["Douglas França <douglas_nts@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.42.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
